# voicechat

./: .gitignore  README.md
moshi-s2s-test/: .env.example  Dockerfile  MOSHI_S2S_CHECKLIST.md  README.md  docker-compose.gpu.yml
moshi-s2s-test/scripts/: run-local.sh
voice-chat/: .env.example  Dockerfile  README.md  SPEC.md  TASK_CHECKLIST.md  docker-compose.yml  pyproject.toml
voice-chat/config/: jetson-8gb.env
voice-chat/docs/: ARCHITECTURE.md  BUILD_AND_RUN.md  DEBUGGING.md  DOCKER.md  FRAMEWORKS.md  IMPLEMENTATION.md  JETSON_8GB_PROFILE.md  PYTHON_BEGINNER_START.md
voice-chat/src/voicechat/: __main__.py  config.py  logging_utils.py
voice-chat/src/voicechat/adapters/: factory.py  interfaces.py  stt.py  tts.py
voice-chat/src/voicechat/agent/: client.py
voice-chat/src/voicechat/audio/: io.py  vad.py
voice-chat/src/voicechat/cli/: main.py
voice-chat/src/voicechat/mock_server/: app.py
voice-chat/src/voicechat/orchestrator/: session.py
voice-chat/tests/: test_factories.py  test_integration_mock_pipeline.py  test_orchestrator.py
