[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicechat"
version = "0.1.0"
description = "Lightweight full-duplex voice layer mock app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.28.0",
  "pydantic>=2.8.0",
  "numpy>=2.0.0",
  "sounddevice>=0.5.0",
  "webrtcvad-wheels>=2.0.14",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]
stt = [
  "faster-whisper>=1.0.0",
]

[project.scripts]
voicechat = "voicechat.cli.main:main"
voicechat-mock-agent = "voicechat.mock_server.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
